<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/velocityBase">

        <TextView
            android:id="@+id/title"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_name"
            android:textSize="32sp"
            android:fontFamily="@font/open_sans_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.066"
            android:layout_gravity="center_horizontal" />

        <View
            android:id="@+id/separator"
            android:layout_width="411dp"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/shadow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/add_btn_name"
            android:textAllCaps="false"
            android:textColor="@color/velocityBase"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/save_btn_name"
            android:textAllCaps="false"
            android:textColor="@color/velocityBase"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/btn_add"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/delete_btn_name"
            android:textAllCaps="false"
            android:textColor="@color/velocityBase"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/btn_save"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="335dp"
            android:layout_height="53dp"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="20dp"
            android:autofillHints="Enter task"
            android:background="@drawable/border"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
            android:ems="10"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="start|top"
            android:hint="@string/hint"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_save" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/task_list"
            android:layout_width="335dp"
            android:layout_height="250dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <View
            android:id="@+id/separator2"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="21dp"
            android:background="@drawable/shadow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_list" />

        <TextView
            android:id="@+id/text_date_display"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:text="@string/date_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="@font/open_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator2" />

        <Button
            android:id="@+id/btn_sign_out"
            android:enabled="false"
            android:layout_width="104dp"
            android:layout_height="41dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="7dp"
            android:text="@string/sign_out_btn_name"
            android:fontFamily="@font/open_sans_semibold"
            app:layout_constraintStart_toEndOf="@+id/text_date_display"
            app:layout_constraintTop_toTopOf="@+id/separator2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>